--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* styles.css */
 
 .iframe-container {
-    width: 100%;
-    height: 100%; /* or any desired height */
+    width: 80%;
+    height: 80vh; /* or any desired height */
     overflow: hidden;
     position: relative;
 }
